--- a/roles/jenkins/templates/sbranch.xml
+++ b/roles/jenkins/templates/sbranch.xml
@@ -17,7 +17,7 @@
             <configVersion>2</configVersion>
             <userRemoteConfigs>
                 <hudson.plugins.git.UserRemoteConfig>
-                    <url>https://github.com/raghudevopsb67/learning-jenkins</url>
+                    <url>https://github.com/raghudevopsb67/{{item.repo}}</url>
                 </hudson.plugins.git.UserRemoteConfig>
             </userRemoteConfigs>
             <branches>
